# defnew

./: .ignore  Cargo.toml  LICENSE  README.md
src/: def.rs  lib.rs  main.rs  platform.rs
src/def/: alignment.rs  array.rs  boolean.rs  castable.rs  endianness.rs  enum.rs  fillable.rs  float.rs  integral.rs  layout.rs  parse.rs  pointer.rs  struct.rs  union.rs
src/platform/: x86_64.rs
