[package]
name = "defnew"
version = "0.1.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
homepage = "https://github.com/passcod/refnew"
license = "CC-BY-NC-SA-4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.15"
lexpr = "0.2.4"
log = "0.4.8"
cfg-if = "0.1.10"
clap = "2.33.0"
