[package]
name = "defnew"
version = "0.1.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
homepage = "https://github.com/passcod/defnew"
license = "CC-BY-NC-SA-4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.18"
lexpr = "0.2.4"
log = "0.4.8"
cfg-if = "0.1.10"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] } # until 3.0 is released
libc = "0.2.70"
eyre = { version = "0.4.1", default-features = false }
color-eyre = "0.3"

# libc analysis for syscall tool generation
kuchiki = "0.8.0"
html5ever = "0.25.1"
regex = "1.3.7"
once_cell = "1.3.1"
syn = { version = "1.0.22", features = ["parsing"] }
